tests/idris2/error/perror021/expected
1/1: Building Implicit (Implicit.idr)
Error: Expected '}'.

Implicit:9:17--9:19
 5 | 
 6 | myReverse : Vect n el -> Vect n el
 7 | myReverse [] = []
 8 | myReverse {n = S k} (x :: xs) =
 9 |     myReplace {p=\n => Vect n el} (plusCommutative k 1) (myReverse xs ++ [x])
                     ^^

